--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -18,6 +18,17 @@
   color: white;
 }
 
+.Card {
+  background-color: white;
+  padding: 32px;
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11), 0 5px 15px 0 rgba(0, 0, 0, 0.08);
+  box-sizing: border-box;
+}
+
 .Messages-list {
   padding: 20px 0;
   max-width: 900px;
