add delete button and code refactor

--- a/frontend/src/components/Upload.css
+++ b/frontend/src/components/Upload.css
@@ -24,6 +24,12 @@
     opacity: 0.5;
     margin-left: 32px;
 }
+
+.DeleteIcon {
+    padding-top: 10px;
+    height: 24px;
+    width: 24px;
+}
   
 .ProgressWrapper {
     display: flex;
