add event listner to delete icon

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -95,7 +95,7 @@ input {
     flex-grow: 1;
 }
 
-button {
+.SendMessageButton {
     padding: 5px 10px;
     font-size: 16px;
     background-color: rgb(0, 60, 255);
