finish information button

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -108,3 +108,16 @@ input {
     max-height: 80%;
     overflow-y: scroll;
 }
+
+.How-to-use {
+    float: right;
+}
+
+.How-to-use-icon {
+    width: 40px;
+    height: auto;
+}
+
+.How-to-use-icon:hover {
+    cursor: pointer
+}
