Information on how to train to display on frontend (#107)
* init modal

* setup raw info

* add remarkable

* add markdown dispaly

* make modal scrollable and fix overflow

* finish information button

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -103,3 +103,21 @@ input {
     border: none;
     border-radius: 8px;
 }
+
+.modal {
+    max-height: 80%;
+    overflow-y: scroll;
+}
+
+.How-to-use {
+    float: right;
+}
+
+.How-to-use-icon {
+    width: 40px;
+    height: auto;
+}
+
+.How-to-use-icon:hover {
+    cursor: pointer
+}
