improve dashboard UI (#128)
* add basic layout

* improve vertical menu bar layout

* add onclick to change graph

* make switching tab work

* improve ui

--- a/frontend/src/components/stylesheets/Dashboard.css
+++ b/frontend/src/components/stylesheets/Dashboard.css
@@ -9,6 +9,14 @@
     padding-top: 35%;
 }
 
+.dashboard-grid {
+    margin: 0 0 0 0 !important;
+}
+
+.vertical-menu {
+    height: 100%;
+}
+
 .grid {
     height: 100%;
 }
